package Ejercicio6;

public class Consumidor {
    private String nombre;
    private String telefono;
    public Consumidor(String nombre, String telefono) { this.nombre = nombre; this.telefono = telefono; }
    public String getNombre() { return nombre; }
    public String getTelefono() { return telefono; }
}

